--- a/aps-aeccim-explorer/wwwroot/index.html
+++ b/aps-aeccim-explorer/wwwroot/index.html
@@ -5,6 +5,7 @@
   <title>AEC CIM Explorer - BETA</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="http://cdn.autodesk.io/favicon.ico">
+  <link rel="mask-icon" href="http://cdn.autodesk.io/favicon.ico">
   <style>
     body {
       height: 100%;
