--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>AEC Cloud Information Model Explorer - BETA</title>
+  <title>AEC Model Data Explorer - BETA</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="http://cdn.autodesk.io/favicon.ico">
   <link rel="mask-icon" href="http://cdn.autodesk.io/favicon.ico">
@@ -19,7 +19,8 @@
     }
   </style>
   <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/css/bootstrap.min.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="main.css" />
   <!-- This link will always fetch the latest version of Balloon.css -->
   <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
@@ -46,19 +47,20 @@
     <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
     <span class="title">AEC Cloud Information Model Explorer - BETA</span>
     <div id="projectinput" data-balloon-length="fit" aria-label="Project id is fixed for this beta!"
-            data-balloon-pos="down">
-      <input type="text" placeholder="PASTE THE PROJECT ID HERE" value="b.f609fbf7-7959-4832-a379-84028c470d0c" disabled id="projectid" />
+      data-balloon-pos="down">
+      <input type="text" placeholder="PASTE THE PROJECT ID HERE" value="b.f609fbf7-7959-4832-a379-84028c470d0c" disabled
+        id="projectid" />
     </div>
-    <div id="iteminput" data-balloon-length="fit" aria-label="Here goes an item/version id like urn:adsk.wipprod:dm.lineage..."
-            data-balloon-pos="down">
+    <div id="iteminput" data-balloon-length="fit"
+      aria-label="Here goes an item/version id like urn:adsk.wipprod:dm.lineage..." data-balloon-pos="down">
       <input type="text" placeholder="ITEM/VERSION ID HERE" id="modelurn" />
     </div>
     <div class="form-check form-switch form-switch-sm">
       <input class="form-check-input" type="checkbox" id="toggleviewer">
       <label class="form-check-label" for="toggleviewer" style="margin:0.3em">Viewer</label>
     </div>
-    <button id="login" style="visibility: hidden;"  data-balloon-length="fit" aria-label="Login Here!"
-            data-balloon-pos="down">Login</button>
+    <button id="login" style="visibility: hidden;" data-balloon-length="fit" aria-label="Login Here!"
+      data-balloon-pos="down">Login</button>
   </div>
   <div id="graphiql"></div>
   <div id="viewer"></div>
