--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -45,7 +45,7 @@
 <body>
   <div id="header">
     <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
-    <span class="title">AEC Cloud Information Model Explorer - BETA</span>
+    <span class="title">AEC Model Data Explorer - BETA</span>
     <div id="projectinput" data-balloon-length="fit" aria-label="Project id is fixed for this beta!"
       data-balloon-pos="down">
       <input type="text" placeholder="PASTE THE PROJECT ID HERE" value="b.f609fbf7-7959-4832-a379-84028c470d0c" disabled
