--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>AEC Cloud Information Model Explorer - BETA</title>
+  <title>AEC Data Model Explorer - BETA</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="http://cdn.autodesk.io/favicon.ico">
   <link rel="mask-icon" href="http://cdn.autodesk.io/favicon.ico">
@@ -45,7 +45,7 @@
 <body>
   <div id="header">
     <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
-    <span class="title">AEC Cloud Information Model Explorer - BETA</span>
+    <span class="title">AEC Data Model Explorer - BETA</span>
     <div id="projectinput" data-balloon-length="fit" aria-label="Here goes a project id like b.f609fbf7..."
       data-balloon-pos="down">
       <input type="text" placeholder="PASTE THE PROJECT ID HERE" id="projectid" />
