update auth and signin

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -58,8 +58,8 @@
       <input class="form-check-input" type="checkbox" id="toggleviewer">
       <label class="form-check-label" for="toggleviewer" style="margin:0.3em">Viewer</label>
     </div>
-    <button id="login" style="visibility: hidden;" data-balloon-length="fit" aria-label="Login Here!"
-      data-balloon-pos="down">Login</button>
+    <button id="signin" style="visibility: hidden;" data-balloon-length="fit" aria-label="Sign In Here!"
+      data-balloon-pos="down">Sign In</button>
   </div>
   <div id="graphiql"></div>
   <div id="viewer"></div>
