--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -58,6 +58,14 @@
       <input class="form-check-input" type="checkbox" id="toggleviewer">
       <label class="form-check-label" for="toggleviewer" style="margin:0.3em">Viewer</label>
     </div>
+    <a type="button" class="btn btn-light mr-3" target="_blank" href="/voyager.html">
+      <img src="voyager.svg"  
+        class="header-button"
+        width="24"
+        height="24" 
+        title="Voyager" 
+      />&nbsp;Voyager
+    </a>
     <button id="signin" style="visibility: hidden;" data-balloon-length="fit" aria-label="Sign In Here!"
       data-balloon-pos="down">Sign In</button>
   </div>
@@ -70,7 +78,8 @@
     var globalViewer = '';
     var queryResponse = '';
     let defaultQuery = `query GetElementsByFilter{
-    elements(designId: "yourdesignid", filter: {query:"yourfilter"}) {
+    aec{
+      elements(elementGroupId: "yourdesignid", filter: {query:"yourfilter"}) {
         pagination {
             cursor
         }
@@ -84,9 +93,8 @@
                 }
             }
         }
-    }
-}
-`;
+      }
+    }`;
     setInitialTabs();
 
     function setInitialTabs() {
@@ -139,13 +147,15 @@
           tab.title = 'GetHubs';
           tab.query = `# Task 1 – Pick a Hub
 query GetHubs {
-  hubs {
-    pagination {
-      cursor
-    }
-    results {
-      name
-      id
+  nav{
+    hubs {
+      pagination {
+        cursor
+      }
+      results {
+        name
+        id
+      }
     }
   }
 }`;
@@ -154,16 +164,15 @@ query GetHubs {
           tab.title = 'GetProjects';
           tab.query = `# Task 2 – Pick Projects
 query GetProjects {
-  projects(hubId: "yourhubid") {
-    pagination {
-      cursor
-    }
-    results {
-      id
-      name
-      alternativeRepresentations{
-				externalProjectId
-			}
+  nav{
+    projects(hubId: "yourhubid") {
+      pagination {
+        cursor
+      }
+      results {
+        id
+        name
+      }
     }
   }
 }`;
@@ -172,17 +181,19 @@ query GetProjects {
           tab.title = 'GetDesignsByProject';
           tab.query = `# Task 3 – Retrieve designs from project
 query GetDesignsByProject {
-  aecDesignsByProject(projectId: "yourprojectid") {
-    pagination {
-      cursor
-    }
-    results{
-      name
-      id
-      alternativeRepresentations{
-				fileUrn
-				fileVersionUrn
-			}
+  aec{
+    elementGroupsByProject(projectId: "yourprojectid") {
+      pagination {
+        cursor
+      }
+      results{
+        name
+        id
+        alternativeIdentifiers{
+          fileUrn
+          fileVersionUrn
+        }
+      }
     }
   }
 }`;
@@ -191,17 +202,19 @@ query GetDesignsByProject {
           tab.title = 'GetElementsFromCategory';
           tab.query = `# Task 4 – Get Elements within a design using a filter
 query GetElementsFromCategory {
-  elements(designId: "yourdesignid", filter: {query:"property.name.category==Walls"}) {
-    pagination {
-      cursor
-    }
-    results {
-      id
-      name
-      properties {
-        results {
-          name
-          value
+  aec{
+      elements(elementGroupId: "yourdesignid", filter: {query:"property.name.category==Walls"}) {
+      pagination {
+        cursor
+      }
+      results {
+        id
+        name
+        properties {
+          results {
+            name
+            value
+          }
         }
       }
     }
@@ -218,13 +231,13 @@ query GetElementsFromCategory {
       let resJSON = await res.json();
       accessToken = resJSON.access_token;
       if (accessToken === undefined) {
-        showHelpers('login');
-        return 'Please login first';
+        showHelpers('sign in');
+        return 'Please sign in first';
       }
 
       const { headers = {} } = opts;
       return fetch(
-        "https://developer.api.autodesk.com/aecdatamodel/graphql",
+        "https://developer.api.autodesk.com/beta/graphql",
         {
           method: "post",
           headers: {
